cmake_minimum_required(VERSION 3.19.0)
cmake_policy(SET CMP0110 NEW)
project (LinkedListTest)
include_directories(${PROJECT_SOURCE_DIR})
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-pthread")
enable_testing()
add_executable(linkedlisttestusint linkedlisttestusint.c)
add_executable(linkedlistteststring linkedlistteststring.c)
add_executable(linkedlistteststruct linkedlistteststruct.c)
add_test("LinkedList Unsigned Short Ints Test" linkedlisttestusint)
add_test("LinkedList Strings Test" linkedlistteststring)
add_test("LinkedList Structs Test" linkedlistteststruct)
